# ocp-evals

./: .gitignore  AGENTS.md  Makefile  OWNERS  OWNERS_ALIASES  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: rbac-ocp-evals.yaml  system.yaml  system_google_vertex.yaml  system_google_vertex_anthropic.yaml  system_watsonx.yaml
config/scripts/: cleanup.sh  setup.sh  verify_namespace.sh
docs/: adding_new_domain.md  ci_integration.md
eval_output/: .gitkeep
examples/: run_quick_eval.sh
scripts/: run_evaluation.sh  run_tests.sh
tests/: README.md  __init__.py  conftest.py  test_basic.py
tests/config/ols_deploy/: olsconfig.crd.google_vertex_anthropic_cluster_updates.yaml  olsconfig.crd.google_vertex_cluster_updates.yaml  olsconfig.crd.openai_cluster_updates.yaml  olsconfig.crd.watsonx_cluster_updates.yaml
tests/e2e/: __init__.py
tests/e2e/evaluation/: test_cluster_updates.py
tests/scripts/: test-cluster-updates.sh  utils.sh
